Fix footer css on small screens

--- a/src/components/Bookmark/Bookmark.module.css
+++ b/src/components/Bookmark/Bookmark.module.css
@@ -11,9 +11,9 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   gap: 10px;
-  margin: 0;
+  margin: 20px;
 }
 
 h1 {
